[package]
name = "lights-out-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity <antigravity@example.com>"]
description = "High performance linear algebra solver for Lights Out game"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
